ADD: precommit by husky

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", 
+      "paths": { 
+        "@helpers/*": ["helpers/*"],
+        "@components/*": ["components/*"],
+      },
     "target": "es6",
     "lib": [
       "dom",
