--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "prettier/prettier": "error",
     "space-before-function-paren": "off",
     "react/prop-types": "off",
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "multiline-ternary": [ "warn", "never" ],
+      "@typescript-eslint/no-empty-interface": "off"
   }
 }
