--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2"
   }
